--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mastercard.pts.integrated</groupId>
-	<artifactId>mi-iss-automation-epam</artifactId>
+	<artifactId>mi-iss-automation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>MI Issuing Smoke Tests</name>
 
@@ -10,12 +10,11 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
 		<mtaf-ui-tools.version>1.5.0</mtaf-ui-tools.version>
 		<mtaf-provider-factory.version>2.3.0-20170411.160657-4</mtaf-provider-factory.version>
 		<mtaf-automation-utils.version>1.4.0</mtaf-automation-utils.version>
-		
 		<aspectj.version>1.8.9</aspectj.version>
+		<sl4j.version>1.7.25</sl4j.version>
 		<junit.version>4.12</junit.version>
 		<java-hamcrest.version>2.0.0.0</java-hamcrest.version>
 		<ant.version>1.7.0</ant.version>
@@ -28,21 +27,29 @@
 		<oracle-ojdbc.version>11.2.0</oracle-ojdbc.version>
 		<jackson-databind.version>2.8.9</jackson-databind.version>
 		<json-patch.version>1.9</json-patch.version>
-		
 		<embeddables>**/TestStories.java</embeddables>
 		<ignore.failure.in.stories>true</ignore.failure.in.stories>
 		<ignore.failure.in.view>true</ignore.failure.in.view>
 		<generate.view.after.story>true</generate.view.after.story>
 		<story.timout.secs>7200</story.timout.secs>
-		
 		<jbehave-maven-plugin.version>4.1</jbehave-maven-plugin.version>
 		<properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
 		<aspectj-maven-plugin.version>1.10</aspectj-maven-plugin.version>
 		<serenity-maven-plugin.version>1.1.36</serenity-maven-plugin.version>
 		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
+		<jbehave.core.version>4.0.5</jbehave.core.version>
+		<dependency.locations.enabled>false</dependency.locations.enabled>
 	</properties>
-
-	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
+			</plugin>
+			
+		</plugins>
+	</reporting>
 	<repositories>
 		<repository>
 			<!-- com.sikulix.sikulixapi: jxgrabkey -->
@@ -60,8 +67,13 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+		</dependency>
 		<dependency>
 			<groupId>com.mastercard.testing</groupId>
 			<artifactId>mtaf-ui-tools</artifactId>
@@ -111,6 +123,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.mastercard.testing.issuing</groupId>
+			<artifactId>issuing-soap-tools</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.mastercard.testing</groupId>
 			<artifactId>mtaf-automation-utils</artifactId>
 			<version>${mtaf-automation-utils.version}</version>
@@ -123,6 +140,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.mastercard.testing</groupId>
+			<artifactId>mtaf-automation-utils</artifactId>
+			<version>1.5.0-SNAPSHOT</version>
+			
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${sl4j.version}</version>
+		</dependency>
+		<dependency>
 			<artifactId>junit</artifactId>
 			<groupId>junit</groupId>
 			<version>${junit.version}</version>
@@ -132,6 +160,12 @@
 					<groupId>org.hamcrest</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.0.6</version>
 		</dependency>
 
 		<dependency>
@@ -157,7 +191,30 @@
 			<artifactId>ant</artifactId>
 			<version>${ant.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.mastercard.testing</groupId>
+			<artifactId>mtaf-jdbc-tools</artifactId>
+			<version>1.2.0</version>
+		</dependency>
 
+
+		<dependency>
+			<groupId>net.sourceforge.jtds</groupId>
+			<artifactId>jtds</artifactId>
+			<version>1.2.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6.12</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
@@ -168,6 +225,12 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>java-hamcrest</artifactId>
 			<version>${java-hamcrest.version}</version>
+		</dependency>
+		<dependency>
+
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.0</version>
 		</dependency>
 
 		<dependency>
@@ -183,9 +246,24 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+<dependency>
+			<groupId>com.github.2gis.winium</groupId>
+			<artifactId>winium-webdriver</artifactId>
+			<version>${winium-webdriver.version}</version>
+		</dependency>
+<dependency>
 			<groupId>com.sikulix</groupId>
 			<artifactId>sikulixapi</artifactId>
 			<version>${sikulixapi.version}</version>
+			</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.3</version>
 		</dependency>			
         
 		<dependency>
@@ -232,19 +310,35 @@
 
 	<build>
 		<plugins>
+			
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
-				<version>${properties-maven-plugin.version}</version>
+			
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
+						
+						<id>unpack-resources-core</id>
+						<phase>process-resources</phase>
 						<goals>
 							<goal>set-system-properties</goal>
+							<goal>unpack</goal>
 						</goals>
 						<configuration>
 							<properties>
 								<serenityReport>true</serenityReport>
 							</properties>
+							<outputDirectory>${project.build.directory}/jbehave/view</outputDirectory>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+							<excludes>**/*.class</excludes>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.jbehave</groupId>
+									<artifactId>jbehave-navigator</artifactId>
+									<version>${jbehave.core.version}</version>
+								</artifactItem>
+							</artifactItems>
 						</configuration>
 					</execution>
 				</executions>
@@ -272,16 +366,19 @@
 			<plugin>
 				<groupId>org.jbehave</groupId>
 				<artifactId>jbehave-maven-plugin</artifactId>
-				<version>${jbehave-maven-plugin.version}</version>
+				<version>${jbehave.core.version}</version>
 				<executions>
 					<execution>
 						<id>run-stories-as-embeddables</id>
 						<phase>integration-test</phase>
 						<configuration>
+
+							<storyTimeoutInSecs>3600</storyTimeoutInSecs>
 							<threads>${jbehave.execution.threads}</threads>
 							<includes>
 								<include>${embeddables}</include>
 							</includes>
+							<skip>${jbehave.skip.tests}</skip>
 							<metaFilters>
 								<metaFilter>${meta.filter}</metaFilter>
 							</metaFilters>
@@ -295,6 +392,7 @@
 							<ignoreFailureInStories>${ignore.failure.in.stories}</ignoreFailureInStories>
 							<ignoreFailureInView>${ignore.failure.in.view}</ignoreFailureInView>
 							<generateViewAfterStories>${generate.view.after.story}</generateViewAfterStories>
+							<verboseFailures>true</verboseFailures>
 						</configuration>
 						<goals>
 							<goal>unpack-view-resources</goal>
@@ -302,6 +400,15 @@
 						</goals>
 					</execution>
 				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+						<version>1.2.17</version>
+
+					</dependency>
+				</dependencies>
+
 			</plugin>
 			
 			<plugin>
@@ -329,6 +436,8 @@
 
 		<pluginManagement>
 			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -345,6 +454,24 @@
 											<goal>set-system-properties</goal>
 										</goals>
 									</pluginExecutionFilter>
+									<pluginExecutionFilter>
+
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-dependency-plugin
+										</artifactId>
+										<versionRange>
+											[2.1,)
+										</versionRange>
+										<goals>
+											<goal>set-system-properties</goal>
+										</goals>
+										<goals>
+											<goal>unpack</goal>
+										</goals>
+									</pluginExecutionFilter>
 									<action>
 										<ignore />
 									</action>
@@ -356,4 +483,9 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<parent>
+		<groupId>com.mastercard.fusion.application</groupId>
+		<artifactId>parent</artifactId>
+		<version>0.7</version>
+	</parent>
 </project>
