--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mastercard.MPTS.bdd</groupId>
+		<artifactId>mi-iss-automation</artifactId>
 	<name>mi_issuing_insprint_automation</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<!--  jbehave.core.version>4.0.5</jbehave.core.version-->
+		<jbehave.core.version>4.0.5</jbehave.core.version>
 		<jbehave-maven-plugin.version>4.1</jbehave-maven-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<mtaf-ui-tools.version>1.5.0</mtaf-ui-tools.version>
@@ -346,32 +347,8 @@
 				</executions>
 			</plugin>
 			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack-resources-core</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/jbehave/view</outputDirectory>
-							<overWriteReleases>true</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-							<excludes>**/*.class</excludes>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.jbehave</groupId>
-									<artifactId>jbehave-navigator</artifactId>
-									<version>${jbehave.core.version}</version>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+			
+			
 			
 			<plugin>
 				<groupId>org.jbehave</groupId>
@@ -486,5 +463,4 @@
 		<artifactId>parent</artifactId>
 		<version>0.7</version>
 	</parent>
-	<artifactId>mi_issuing_insprint_automation</artifactId>
 </project>
