--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -1,8 +1,20 @@
+application.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+agent.application.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
+
+
+default.wait.timeout_in_sec=10000
+
+Customer.portal.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
+Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
+cardholder.portal.url=
+collect.portal.url=
+
 portal.customer.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 portal.customer.user.name=LAMBAT1
 portal.customer.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 portal.customer.user.admin.name=Admin
 portal.customer.user.admin.password=NRysD0uSc28MynhVmsFnYg==
+
 
 portal.agent.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
 portal.agent.user.admin.name=ADM005
