Fixed Tech debt code initialization issues.

--- a/src/main/resources/config/demo/user.properties
+++ b/src/main/resources/config/demo/user.properties
@@ -10,11 +10,4 @@ Customer.portal.user.name2=Rohan
 Customer.portal.user.password2=1234
 
 Agent.portal.user.admin.name=VNAGT
-Agent.portal.user.admin.password=1122 
-
-Agent.portal.user.agency.name=VNAGT
-Agent.portal.user.agency.password=1122
-
-Agent.portal.user.agent.name=VNAGT
-Agent.portal.user.agent.password=1122
-
+portal.agent.user.admin.password=1122 
