--- a/src/main/resources/config/stageSA/test.properties
+++ b/src/main/resources/config/stageSA/test.properties
@@ -54,29 +54,16 @@ devcloud.server.port=2222
 devcloud.server.username=dc-user
 devcloud.server.password=Blackeye@123
 
-portal.customer.url=http://10.168.128.112:25003/integratedIssuing-customerPortal/mpts/app/Login
-portal.customer.user.admin.name=Admin
-portal.customer.user.name=abhijeet
-portal.customer.user.password=NRysD0uSc28MynhVmsFnYg==
+#portal.customer.url=http://10.168.128.112:25003/integratedIssuing-customerPortal/mpts/app/Login
+#portal.customer.user.admin.name=Admin
+#portal.customer.user.name=abhijeet
+#portal.customer.user.password=NRysD0uSc28MynhVmsFnYg==
 
 default.wait.timeout_in_sec=80
 defailt.wait.implicitly.timeout_in_msec=500
 default.wait.page.timeout_in_sec=90
 default.wait.script.timeout_in_sec=60
 
-portal.agent.url=
-portal.agent.user.admin.name=
-portal.agent.user.agency.name=
-portal.agent.user.agent.name=
-portal.agent.user.password=
-
-portal.cardholder.url=
-portal.cardholder.user.name=
-portal.cardholder.user.password=
-
-portal.collect.url=
-portal.collect.user.name=
-portal.collect.user.password=
 
 portal.customer.download.folder=C:\\Users\\e060549\\Downloads
 portal.customer.unzipped.folder=C:\\UnzippedFile
