--- a/src/main/resources/config/demo/user.properties
+++ b/src/main/resources/config/demo/user.properties
@@ -1,13 +1,13 @@
 Customer.portal.user.admin.name=Admin
-Customer.portal.user.admin.password=8520
+Customer.portal.user.admin.password=444SDe4tirbsNxnGvJUnnA==
 
 Customer.portal.admin.institutionName=VST
 
 Customer.portal.user.name=Swapnil
-Customer.portal.user.password=4656
+Customer.portal.user.password=444SDe4tirbsNxnGvJUnnA==
 
 Customer.portal.user.name2=Rohan
-Customer.portal.user.password2=1234
+Customer.portal.user.password2=444SDe4tirbsNxnGvJUnnA==
 
 Agent.portal.user.admin.name=VNAGT
-portal.agent.user.admin.password=1122 
+portal.agent.user.admin.password=444SDe4tirbsNxnGvJUnnA== 
