Removing duplicate dependencies Updating Properties

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -4,6 +4,15 @@ application.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 agent.application.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
 default.wait.timeout_in_sec=10000
 
+Customer.portal.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
+Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
+Customer.portal.user.admin.name=Admin
+Customer.portal.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
+Customer.portal.user.name=LAMBAT1
+Customer.portal.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
+Agent.portal.user.admin.name=ADM005
+Agent.portal.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
+Customer.portal.user.name2=Auto001
 
 portal.customer.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 portal.customer.user.name=LAMBAT1
