Fixed properties issue in demo environment.props.

--- a/src/main/resources/config/demo/user.properties
+++ b/src/main/resources/config/demo/user.properties
@@ -10,4 +10,4 @@ Customer.portal.user.name2=Rohan
 Customer.portal.user.password2=444SDe4tirbsNxnGvJUnnA==
 
 Agent.portal.user.admin.name=VNAGT
-portal.agent.user.admin.password=444SDe4tirbsNxnGvJUnnA== 
+Agent.portal.user.admin.password=444SDe4tirbsNxnGvJUnnA== 
