--- a/src/main/resources/config/automation/user.properties
+++ b/src/main/resources/config/automation/user.properties
@@ -3,7 +3,7 @@ Customer.portal.user.admin.password=444SDe4tirbsNxnGvJUnnA==
 
 Customer.portal.admin.institutionName=VST
 
-Customer.portal.user.name=Swapnil
+Customer.portal.user.name=Auto001
 Customer.portal.user.password=444SDe4tirbsNxnGvJUnnA==
 
 Customer.portal.user.name2=Rohan
