--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -28,8 +28,8 @@ portal.collect.user.admin.password=
 
 linux.host.name=ech-10-168-128-232.mastercard.int
 linux.port.number=2222
-linux.user.name=dc-user
-linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
+linux.user.name=issdev
+linux.user.password=IrtRizLhbuaVGEwO7XiKUA==
 
 simulator.mas.port=9127
 simulator.mas.ipaddress=10.168.128.232
