20/11/2017 - Code review comment fixes.

--- a/src/main/resources/config/stage/environment.properties
+++ b/src/main/resources/config/stage/environment.properties
@@ -1,23 +1,57 @@
 #default.wait.timeout_in_sec=10
 
 application.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+base.url=http://10.168.128.50:25003/mpts/eis/ws
+application.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 agent.application.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
-
-Customer.portal.url=http://10.168.128.112:25003/integratedIssuing-customerPortal/mpts/app/Login
-Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
-cardholder.portal.url=
-collect.portal.url=
-
 default.wait.timeout_in_sec=10000
 
 Customer.portal.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
+Customer.portal.user.admin.name=Admin
+Customer.portal.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
+Customer.portal.user.name=LAMBAT1
+Customer.portal.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
+Agent.portal.user.admin.name=ADM005
+Agent.portal.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
+Customer.portal.user.name2=Auto001
+
+
+
+default.wait.timeout_in_sec=10000
+
 cardholder.portal.url=
 collect.portal.url=
 
+linux.host.name=
+linux.port.number=0
+linux.user.name=
+linux.user.password=
 
+simulator.mas.port=9119
+simulator.mas.ipaddress=10.158.14.89
 
+simulator.finsim.port=6262
+simulator.finsim.ipaddress=10.254.2.36
+simulator.finsim.password=zkk0xVdShEy48uuuhlabbw==
+simulator.finsim.pinkey=5A554B8E2DB8D41EEE8DF9E1E18269DB
+simulator.finsim.decimalization.value=1234567890123456
 
+db.host=melstg1-scan
+db.port=1527
+db.username=MPTSE_ISS_USER
+db.password=KmslWW3d
+db.serviceName=Tesa1s
 
+portal.agent.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
+portal.agent.user.name=ADM005
+portal.agent.user.admin.name=ADM005
+portal.agent.user.agency.name=AGNC001
+portal.agent.user.branch.name=AG01BR001
+portal.agent.user.agent.name=AGNT007
+portal.agent.user.password=8SJ28cqk5IcKiZyWDJCAnA==
+portal.agent.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
+
+portal.customer.user.admin.password=NRysD0uSc28MynhVmsFnYg==
 
 
