--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -1,18 +1,21 @@
-Customer.portal.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+Customer.portal.url=http://ech-10-168-128-92.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
 Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
 
 default.wait.timeout_in_sec=10000
-portal.customer.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+portal.customer.url=http://ech-10-168-128-92.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
 portal.customer.user.name=Auto001
 portal.customer.user.password=444SDe4tirbsNxnGvJUnnA==
 portal.customer.user.admin.name=Admin
 portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
-portal.agent.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
+portal.agent.url=http://ech-10-168-129-135.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
 portal.agent.user.admin.name=Admin555
 portal.agent.user.agency.name=AGNC001
 portal.agent.user.branch.name=BRNCH001
 portal.agent.user.agent.name=AGNT007
+portal.agent.user.nonfundedagency.name=AGNC002
+portal.agent.user.nonfundedbranch.name=BRNCH002
+portal.agent.user.nonfundedagent.name=AGNT008
 portal.agent.user.password=8SJ28cqk5IcKiZyWDJCAnA==
 portal.agent.user.admin.password=RPfjjObtdPb/z3tWSkRpXg==
 
