21/11/2017 - Test Configuration for TestData setup

--- a/src/main/resources/config/stage/test.properties
+++ b/src/main/resources/config/stage/test.properties
@@ -16,7 +16,7 @@ bdd.jdbc.tools.db.connection.url=jdbc:Oracle:thin:@melstg1-scan:1527/tesa1s
 bdd.jdbc..db.user=akbtOOYREv7aBD4bygHgOw==
 bdd.jdbc..db.password=1QXC5xGNut13YML26DmKxg==
 
-test.data.file=/src/main/resources/config/%s/TestData/%s.xlsx
+test.data.file=/src/main/resources/config/%s/Data/%s.xlsx
 devcloud.server.ip=10.168.129.49
 devcloud.server.port=2222
 devcloud.server.username=dc-user
@@ -65,13 +65,16 @@ default.wait.page.timeout_in_sec=90
 default.wait.script.timeout_in_sec=60
 
 
-portal.cardholder.url=
-portal.cardholder.user.name=
-portal.cardholder.user.password=
+portal.cardholder.url=https://stage.sa.cardholder.mastercard.com/mpts/eis/app
+portal.cardholder.user.name=10000172850000001
+portal.cardholder.user.password=8SJ28cqk5IcKiZyWDJCAnA==
+portal.cardholder.user.admin.name=ADM005
+portal.cardholder.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
 
-portal.collect.url=
-portal.collect.user.name=
-portal.collect.user.password=
+portal.collect.url=https://stage.sa.collect.mastercard.com/mpts/eis/app
+portal.collect.user.name=OMANCOL
+portal.collect.user.password=8SJ28cqk5IcKiZyWDJCAnA==
+portal.collect.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
 
 portal.customer.download.folder=C:\\Users\\e060549\\Downloads
 portal.customer.unzipped.folder=C:\\UnzippedFile
