--- a/src/main/resources/config/stage/user.properties
+++ b/src/main/resources/config/stage/user.properties
@@ -7,7 +7,7 @@ Customer.portal.user.name=Swapnil
 Customer.portal.user.password=4656
 
 Agent.portal.user.admin.name=VNAGT
-portal.agent.user.admin.password=1122 
+#portal.agent.user.admin.password=1122 
 
 Customer.portal.user.name2=Rohan
 Customer.portal.user.password2=1234
