--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -10,9 +10,9 @@ portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
 portal.agent.url=http://ech-10-168-129-135.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
 portal.agent.user.admin.name=Admin555
-portal.agent.user.agency.name=AGNC001
-portal.agent.user.branch.name=BRNCH001
-portal.agent.user.agent.name=AGNT007
+portal.agent.user.agency.name=AGNC003
+portal.agent.user.branch.name=BRNCH003
+portal.agent.user.agent.name=AGNT009
 portal.agent.user.nonfundedagency.name=AGNC002
 portal.agent.user.nonfundedbranch.name=BRNCH002
 portal.agent.user.nonfundedagent.name=AGNT008
@@ -43,8 +43,8 @@ simulator.finsim.password=zZOmDlMyt1qfQnrj0oZtPw==
 simulator.finsim.pinkey=EE9A8BACEE127B4B2DC900D8EEA9221D
 simulator.finsim.decimalization.value=1234567890123456
 
-db.host=ech-10-168-129-110.mastercard.int
+db.host=ech-10-168-129-228.mastercard.int
 db.port=1527
-db.username=MPTSE_ISS_USER
-db.password=ELTTEST5
-db.serviceName=DEVCLOUD
+db.username=devadmin
+db.password=ELTDEMO1
+db.serviceName=devcloud
