24/11/2017 - Xlsx to xls change and modifications into reading sheet

--- a/src/main/resources/config/stage/test.properties
+++ b/src/main/resources/config/stage/test.properties
@@ -16,7 +16,7 @@ bdd.jdbc.tools.db.connection.url=jdbc:Oracle:thin:@melstg1-scan:1527/tesa1s
 bdd.jdbc..db.user=akbtOOYREv7aBD4bygHgOw==
 bdd.jdbc..db.password=1QXC5xGNut13YML26DmKxg==
 
-test.data.file=/src/main/resources/config/%s/Data/%s.xlsx
+test.data.file=/src/main/resources/config/%s/Data/%s.xls
 devcloud.server.ip=10.168.129.49
 devcloud.server.port=2222
 devcloud.server.username=dc-user
@@ -28,7 +28,7 @@ app.user.Bankinstitutionselection=BNK [000000]
 
 Customer.portal.admin.institutionName=VST
 
-test.data.file=/src/main/resources/config/%s/TestData/%s.xlsx
+#test.data.file=/src/main/resources/config/%s/TestData/%s.xlsx
 
 #Linux Server Configuration - Cosmos DevCloud
 #devcloud.server.ip=10.168.128.124
@@ -48,7 +48,7 @@ devcloud.server.password=pune@123
 #devcloud.server.username=dc-user
 #devcloud.server.password= Blackeye@123
 
-test.data.file=/src/main/resources/config/%s/TestData/%s.xlsx
+#test.data.file=/src/main/resources/config/%s/TestData/%s.xlsx
 devcloud.server.ip=10.168.129.49
 devcloud.server.port=2222
 devcloud.server.username=dc-user
