Made changes to other files, reverting changes done.

--- a/src/main/resources/config/demoDevCloud/user.properties
+++ b/src/main/resources/config/demoDevCloud/user.properties
@@ -10,15 +10,15 @@ Customer.portal.user.name2=Rohan
 Customer.portal.user.password2=1234
 
 Agent.portal.user.admin.name=VNAGT
-portal.agent.user.admin.name=Admin555
-portal.agent.user.agency.name=AGNC001
-portal.agent.user.branch.name=BRNCH001
-portal.agent.user.agent.name=AGNT007
-portal.agent.user.nonfundedagency.name=AGNC002
-portal.agent.user.nonfundedbranch.name=BRNCH002
-portal.agent.user.nonfundedagent.name=AGNT008
-portal.agent.user.password=8SJ28cqk5IcKiZyWDJCAnA==
-portal.agent.user.admin.password=RPfjjObtdPb/z3tWSkRpXg==
+portal.agent.user.admin.password=1122 
+
+
+portal.agent.user.agency.name=
+portal.agent.user.agency.password=
+
+
+portal.agent.user.agent.name=
+portal.agent.user.agent.password=
 
 portal.cardholder.user.name=
 portal.cardholder.user.password=
