Updated code for New program

--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -1,14 +1,14 @@
-Customer.portal.url=http://ech-10-168-128-92.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
-Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
+Customer.portal.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+Agent.portal.url=http://ech-10-168-129-105.mastercard.int:25003/mpts/eis/app 
 
 default.wait.timeout_in_sec=10000
-portal.customer.url=http://ech-10-168-128-92.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+portal.customer.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
 portal.customer.user.name=Auto001
 portal.customer.user.password=444SDe4tirbsNxnGvJUnnA==
 portal.customer.user.admin.name=Admin
 portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
-portal.agent.url=http://ech-10-168-129-135.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
+portal.agent.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
 portal.agent.user.admin.name=Admin555
 portal.agent.user.agency.name=AGNC003
 portal.agent.user.branch.name=BRNCH003
@@ -43,8 +43,8 @@ simulator.finsim.password=zZOmDlMyt1qfQnrj0oZtPw==
 simulator.finsim.pinkey=EE9A8BACEE127B4B2DC900D8EEA9221D
 simulator.finsim.decimalization.value=1234567890123456
 
-db.host=ech-10-168-129-228.mastercard.int
+db.host=ech-10-168-129-110.mastercard.int
 db.port=1527
-db.username=devadmin
-db.password=ELTDEMO1
-db.serviceName=devcloud
+db.username=MPTSE_ISS_USER
+db.password=ELTTEST5
+db.serviceName=DEVCLOUD
