--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -1,5 +1,5 @@
 Customer.portal.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
-Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
+Agent.portal.url=http://ech-10-168-129-105.mastercard.int:25003/mpts/eis/app 
 
 default.wait.timeout_in_sec=10000
 portal.customer.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
@@ -8,7 +8,7 @@ portal.customer.user.password=444SDe4tirbsNxnGvJUnnA==
 portal.customer.user.admin.name=Admin
 portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
-portal.agent.url=http://ech-10-168-129-135.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
+portal.agent.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
 portal.agent.user.admin.name=Admin555
 portal.agent.user.agency.name=AGNC003
 portal.agent.user.branch.name=BRNCH003
