--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -29,10 +29,10 @@ portal.collect.user.name=Admin
 portal.collect.user.password=A3THHHwldpgQs6XxAHKZhQ==
 portal.collect.user.admin.password=
 
-linux.host.name=ech-10-168-128-232.mastercard.int
+linux.host.name=10.168.128.232
 linux.port.number=2222
-linux.user.name=dc-user
-linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
+linux.user.name=issdev
+linux.user.password=IrtRizLhbuaVGEwO7XiKUA==
 
 simulator.mas.port=9127
 simulator.mas.ipaddress=10.168.128.232
