MAS 16.Q4 and MAS 17.Q4 code compatibility fixes. Introduced new file simulator/MasDetailsKeyValuePair.java which holds the all the required information around the MAS versions available. Moved Simulator based files simulator/MasDetailsKeyValuePair.java, simulator/SimulatorConstantsData.java, simulator/SimulatorUtilities.java to a separate folder for ease of handling data Updated automation\environment.properties and demo\environment.properties files.. added simulator.mas.version, simulator.mdfs.version,  simulator.mcps.version so that user can choose what version of simulator to use in case a specific one needs to be invoked Added shift tab robot operation Optimized close simulator and used the same in launching the simulator (we close simulator instances before launching a new session)

--- a/src/main/resources/config/automation/environment.properties
+++ b/src/main/resources/config/automation/environment.properties
@@ -31,9 +31,13 @@ linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
 
 simulator.mas.port=9127
 simulator.mas.ipaddress=10.168.129.65
+simulator.mas.version=Latest
 
 simulator.mdfs.port=8334
 simulator.mdfs.ipaddress=10.168.129.65
+simulator.mdfs.version=MDFS 16.Q4
+
+simulator.mcps.version=Latest
 
 simulator.vts.port=9114
 simulator.vts.ipaddress=10.168.129.65
