--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -36,9 +36,13 @@ linux.user.password=IrtRizLhbuaVGEwO7XiKUA==
 
 simulator.mas.port=9127
 simulator.mas.ipaddress=10.168.128.232
+simulator.mas.version=Latest
 
 simulator.mdfs.port=8334
 simulator.mdfs.ipaddress=10.168.129.65
+simulator.mdfs.version=Latest
+
+simulator.mcps.version=Latest
 
 simulator.vts.port=9114
 simulator.vts.ipaddress=10.168.129.65
