property file entries for stage/environment.properties and stageSA/environment.properties for picking up latest MAS version

--- a/src/main/resources/config/stage/environment.properties
+++ b/src/main/resources/config/stage/environment.properties
@@ -30,12 +30,16 @@ linux.user.password=
 
 simulator.mas.port=9119
 simulator.mas.ipaddress=10.158.14.89
+simulator.mas.version=Latest
 
 simulator.mdfs.port=0
 simulator.mdfs.ipaddress=0
+simulator.mdfs.version=Latest
 
-simulator.vts.port=0
-simulator.vts.ipaddress=0
+simulator.mcps.version=Latest
+
+simulator.vts.port=9114
+simulator.vts.ipaddress=10.168.129.65
 
 simulator.finsim.port=6262
 simulator.finsim.ipaddress=10.254.2.36
