--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -70,6 +70,16 @@ linux.user.password=
 
 simulator.mas.port=9119
 simulator.mas.ipaddress=10.158.14.89
+simulator.mas.version=Latest
+
+simulator.mdfs.port=0
+simulator.mdfs.ipaddress=0
+simulator.mdfs.version=Latest
+
+simulator.mcps.version=Latest
+
+simulator.vts.port=
+simulator.vts.ipaddress=
 
 simulator.finsim.port=6262
 simulator.finsim.ipaddress=10.254.2.36
