--- a/src/main/resources/config/automation/environment.properties
+++ b/src/main/resources/config/automation/environment.properties
@@ -39,8 +39,9 @@ simulator.mdfs.version=MDFS 16.Q4
 
 simulator.mcps.version=Latest
 
-simulator.vts.port=9114
-simulator.vts.ipaddress=10.168.129.65
+simulator.vts.vts.ipaddress=172.27.139.166
+simulator.vts.host.ipaddress=10.168.129.65
+simulator.vts.host.port=9114
 
 simulator.finsim.port=6161
 simulator.finsim.ipaddress=10.254.0.36
