--- a/src/main/resources/config/stage/environment.properties
+++ b/src/main/resources/config/stage/environment.properties
@@ -38,8 +38,9 @@ simulator.mdfs.version=Latest
 
 simulator.mcps.version=Latest
 
-simulator.vts.port=9114
-simulator.vts.ipaddress=10.168.129.65
+simulator.vts.vts.ipaddress=
+simulator.vts.host.ipaddress=
+simulator.vts.host.port=
 
 simulator.finsim.port=6262
 simulator.finsim.ipaddress=10.254.2.36
