--- a/src/main/resources/config/new_AutomationDevCloud/environment.properties
+++ b/src/main/resources/config/new_AutomationDevCloud/environment.properties
@@ -41,6 +41,9 @@ simulator.mcps.version=Latest
 
 simulator.vts.port=9114
 simulator.vts.ipaddress=10.168.129.65
+simulator.vts.vts.ipaddress=172.27.139.166
+simulator.vts.host.ipaddress=10.168.129.65
+simulator.vts.host.port=9114
 
 simulator.finsim.port=6161
 simulator.finsim.ipaddress=10.254.0.36
