Added code for RestAssured API Automation<WIP>

--- a/src/main/resources/config/demoDevCloud/apitest.properties
+++ b/src/main/resources/config/demoDevCloud/apitest.properties
@@ -11,3 +11,5 @@ api.ip=10.168.128.238
 api.bankCode=772273
 #json uri
 api.base.uri=http://jsonplaceholder.typicode.com
+
+api.base.uri_DeviceAPI=http://ech-10-168-130-23.mastercard.int:25003/deviceapi/apis/v1/services/cardholder
