--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -80,6 +80,9 @@ simulator.mcps.version=Latest
 
 simulator.vts.port=
 simulator.vts.ipaddress=
+simulator.vts.vts.ipaddress=
+simulator.vts.host.ipaddress=
+simulator.vts.host.port=
 
 simulator.finsim.port=6262
 simulator.finsim.ipaddress=10.254.2.36
