--- a/src/main/resources/config/demoDevCloud/environment.properties
+++ b/src/main/resources/config/demoDevCloud/environment.properties
@@ -1,11 +1,61 @@
-application.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
-agent.application.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
-
 Customer.portal.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
-Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
-cardholder.portal.url=
-collect.portal.url=
+Agent.portal.url=http://ech-10-168-129-105.mastercard.int:25003/mpts/eis/app 
 
 default.wait.timeout_in_sec=10000
+portal.customer.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+portal.customer.user.name=Auto001
+portal.customer.user.password=444SDe4tirbsNxnGvJUnnA==
+portal.customer.user.admin.name=Admin
+portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
+portal.agent.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
+portal.agent.user.admin.name=Admin555
+portal.agent.user.agency.name=AGNC006
+portal.agent.user.branch.name=BRNCH006
+portal.agent.user.agent.name=AGNT006
+portal.agent.user.nonfundedagency.name=AGNC002
+portal.agent.user.nonfundedbranch.name=BRNCH002
+portal.agent.user.nonfundedagent.name=AGNT008
+portal.agent.user.password=8SJ28cqk5IcKiZyWDJCAnA==
+portal.agent.user.admin.password=RPfjjObtdPb/z3tWSkRpXg==
 
+portal.cardholder.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-cardholderPortal/WebPages/Login.jsp
+portal.cardholder.user.name=yogeshk
+portal.cardholder.user.password=grKhQEi8gw0zbcd1lq25yua8bResNihEKpZvqErkfxs=
+portal.cardholder.user.admin.password=
+
+portal.collect.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-collectPortal/mpts/app/Login
+portal.collect.user.name=Admin
+portal.collect.user.password=A3THHHwldpgQs6XxAHKZhQ==
+portal.collect.user.admin.password=
+
+linux.host.name=10.168.128.232
+linux.port.number=2222
+linux.user.name=issdev
+linux.user.password=IrtRizLhbuaVGEwO7XiKUA==
+
+simulator.mas.port=9127
+simulator.mas.ipaddress=10.168.128.232
+simulator.mas.version=Latest
+
+simulator.mdfs.port=8334
+simulator.mdfs.ipaddress=10.168.129.65
+simulator.mdfs.version=Latest
+
+simulator.mcps.version=Latest
+
+simulator.vts.vts.ipaddress=172.27.139.166
+simulator.vts.host.ipaddress=10.168.129.65
+simulator.vts.host.port=9114
+
+simulator.finsim.port=6161
+simulator.finsim.ipaddress=10.254.0.36
+simulator.finsim.password=zZOmDlMyt1qfQnrj0oZtPw==
+simulator.finsim.pinkey=EE9A8BACEE127B4B2DC900D8EEA9221D
+simulator.finsim.decimalization.value=1234567890123456
+
+db.host=ech-10-168-129-228.mastercard.int
+db.port=1527
+db.username=devadmin
+db.password=ELTDEMO1
+db.serviceName=devcloud
