--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,14 @@
 					<groupId>com.jayway.restassured</groupId>
 					<artifactId>rest-assured</artifactId>
 				</exclusion>
+				<exclusion>
+					<artifactId>bcprov-jdk15on</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bcpkix-jdk15on</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
