--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -20,8 +20,8 @@ portal.agent.user.password=8SJ28cqk5IcKiZyWDJCAnA==
 portal.agent.user.admin.password=RPfjjObtdPb/z3tWSkRpXg==
 
 portal.cardholder.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-cardholderPortal/WebPages/Login.jsp
-portal.cardholder.user.name=yogeshk
-portal.cardholder.user.password=grKhQEi8gw0zbcd1lq25yua8bResNihEKpZvqErkfxs=
+portal.cardholder.user.name=12121218025000079
+portal.cardholder.user.password=hMuybY7m8ZBDL4I9RPPq3+a8bResNihEKpZvqErkfxs=
 portal.cardholder.user.admin.password=
 
 portal.collect.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-collectPortal/mpts/app/Login
