--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -1,8 +1,10 @@
+Customer.portal.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
 Customer.portal.url=http://ech-10-168-131-92.mastercard.int:25003/integratedIssuing-customerPortal/mtps/app/Login
 Agent.portal.url=http://ech-10-168-129-105.mastercard.int:25003/mpts/eis/app 
 
 default.wait.timeout_in_sec=10000
 portal.customer.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+portal.customer.url=http://ech-10-168-131-92.mastercard.int:25003/integratedIssuing-customerPortal/mtps/app/Login
 portal.customer.user.name=Auto001
 portal.customer.user.password=444SDe4tirbsNxnGvJUnnA==
 portal.customer.user.admin.name=Admin
@@ -22,6 +24,8 @@ portal.agent.user.admin.password=RPfjjObtdPb/z3tWSkRpXg==
 portal.cardholder.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-cardholderPortal/WebPages/Login.jsp
 portal.cardholder.user.name=yogeshk
 portal.cardholder.user.password=grKhQEi8gw0zbcd1lq25yua8bResNihEKpZvqErkfxs=
+portal.cardholder.user.name=12121218025000079
+portal.cardholder.user.password=hMuybY7m8ZBDL4I9RPPq3+a8bResNihEKpZvqErkfxs=
 portal.cardholder.user.admin.password=
 
 portal.collect.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-collectPortal/mpts/app/Login
