InSprint stories added

--- a/src/main/resources/config/demo/apitest.properties
+++ b/src/main/resources/config/demo/apitest.properties
@@ -11,3 +11,4 @@ api.ip=10.168.128.238
 api.bankCode=772273
 #json uri
 api.base.uri=http://jsonplaceholder.typicode.com
+api.base.uri_sample=http://jsonplaceholder.typicode.com
