--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -1,8 +1,8 @@
-Customer.portal.url=http://ech-10-168-131-92.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login?0
+Customer.portal.url=http://ech-10-168-131-92.mastercard.int:25003/integratedIssuing-customerPortal/mtps/app/Login
 Agent.portal.url=http://ech-10-168-129-105.mastercard.int:25003/mpts/eis/app 
 
 default.wait.timeout_in_sec=10000
-portal.customer.url=http://ech-10-168-131-92.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login?0
+portal.customer.url=http://ech-10-168-131-92.mastercard.int:25003/integratedIssuing-customerPortal/mtps/app/Login
 portal.customer.user.name=Auto001
 portal.customer.user.password=444SDe4tirbsNxnGvJUnnA==
 portal.customer.user.admin.name=Admin
