--- a/src/main/resources/config/automation/environment.properties
+++ b/src/main/resources/config/automation/environment.properties
@@ -35,7 +35,7 @@ simulator.mas.version=Latest
 
 simulator.mdfs.port=8334
 simulator.mdfs.ipaddress=10.168.129.65
-simulator.mdfs.version=Latest
+simulator.mdfs.version=MDFS 18.Q2
 
 simulator.mcps.version=Latest
 
