Fix for setFileNameToUpload() method

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -8,15 +8,15 @@ Customer.portal.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
 Customer.portal.user.admin.name=Admin
 Customer.portal.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
-Customer.portal.user.name=Nitink
-Customer.portal.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
+Customer.portal.user.name=RaviKk
+Customer.portal.user.password=8SJ28cqk5IcKiZyWDJCAnA==
 Agent.portal.user.admin.name=ADM005
 Agent.portal.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
 Customer.portal.user.name2=Auto001
 
 portal.customer.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
-portal.customer.user.name=Nitink
-portal.customer.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
+portal.customer.user.name=RaviKk
+portal.customer.user.password=8SJ28cqk5IcKiZyWDJCAnA==
 portal.customer.user.admin.name=Admin
 portal.customer.user.admin.password=NRysD0uSc28MynhVmsFnYg==
 
