Updated code for file upload utility. Added env variable in property file.

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -63,10 +63,13 @@ Agent.portal.user.agency.password=1122
 Agent.portal.user.agent.name=VNAGT
 Agent.portal.user.agent.password=1122
 
-linux.host.name=
-linux.port.number=0
-linux.user.name=
-linux.user.password=
+linux.host.name=ecs4stl351
+linux.port.number=2222
+linux.user.name=ptsautouser
+linux.user.password=EX0i/+13t+grvrIdDWxoag==
+linux.folder.path=/mptshome/STAGE2/integrated/elt_bo/data
+linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
+linux.folder.name=AUTOMATION_1
 
 simulator.mas.port=9119
 simulator.mas.ipaddress=10.158.14.89
