--- a/src/main/resources/config/automation/environment.properties
+++ b/src/main/resources/config/automation/environment.properties
@@ -28,8 +28,9 @@ linux.host.name=10.168.129.65
 linux.port.number=2222
 linux.user.name=dc-user
 linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
-linux.folder.path=/home/dc-user/integrated/elt_bo/data/
+linux.folder.path=/home/dc-user/integrated/elt_bo/data/IPM_INCOMING/
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
+linux.folder.name=INPUT
 
 simulator.mas.port=9127
 simulator.mas.ipaddress=10.168.129.65
