--- a/src/main/resources/config/demoDevCloud/environment.properties
+++ b/src/main/resources/config/demoDevCloud/environment.properties
@@ -33,6 +33,8 @@ linux.host.name=10.168.128.232
 linux.port.number=2222
 linux.user.name=issdev
 linux.user.password=IrtRizLhbuaVGEwO7XiKUA==
+linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
+linux.folder.path=
 
 simulator.mas.port=9127
 simulator.mas.ipaddress=10.168.128.232
