--- a/src/main/resources/config/devcloud/environment.properties
+++ b/src/main/resources/config/devcloud/environment.properties
@@ -26,6 +26,8 @@ linux.host.name=10.168.129.49
 linux.port.number=2222
 linux.user.name=dc-user
 linux.user.password=mHCyhGmX/3UuC2I21ePA/w==
+linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
+linux.folder.path=
 
 simulator.mas.port=9113
 simulator.mas.ipaddress=10.168.129.49
