--- a/src/main/resources/config/stageSA_CAN/environment.properties
+++ b/src/main/resources/config/stageSA_CAN/environment.properties
@@ -26,6 +26,8 @@ linux.host.name=
 linux.port.number=0
 linux.user.name=
 linux.user.password=
+linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
+linux.folder.path=
 
 simulator.mas.port=9119
 simulator.mas.ipaddress=10.158.14.89
