--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
             <oracle-ojdbc.version>11.2.0</oracle-ojdbc.version>
             <jackson-databind.version>2.8.9</jackson-databind.version>
             <json-patch.version>1.9</json-patch.version>
+	    <commons-csv.version>1.5</commons-csv.version>
 
             <embeddables>**/TestStories.java</embeddables>
             <ignore.failure.in.stories>true</ignore.failure.in.stories>
@@ -85,6 +86,11 @@
       </repositories>
 
       <dependencies>
+      		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>${commons-csv.version}</version>
+		</dependency>
             <dependency>
                   <groupId>org.apache.ant</groupId>
                   <artifactId>ant-jsch</artifactId>
