review comment changes

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -6,7 +6,7 @@ default.wait.timeout_in_sec=10000
 
 Customer.portal.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
-Customer.portal.user.admin.name=TanmayW
+Customer.portal.user.admin.name=Admin
 Customer.portal.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 Customer.portal.user.name=RaviKk
 Customer.portal.user.password=8SJ28cqk5IcKiZyWDJCAnA==
