--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -63,7 +63,7 @@ Agent.portal.user.agency.password=1122
 Agent.portal.user.agent.name=VNAGT
 Agent.portal.user.agent.password=1122
 
-linux.host.name=ecs4stl351
+linux.host.name=10.158.14.89
 linux.port.number=2222
 linux.user.name=ptsautouser
 linux.user.password=EX0i/+13t+grvrIdDWxoag==
@@ -86,8 +86,8 @@ simulator.vts.vts.ipaddress=
 simulator.vts.host.ipaddress=
 simulator.vts.host.port=
 
-simulator.finsim.port=6262
-simulator.finsim.ipaddress=10.254.2.36
+simulator.finsim.port=6161
+simulator.finsim.ipaddress=10.254.0.36
 simulator.finsim.password=zkk0xVdShEy48uuuhlabbw==
 simulator.finsim.pinkey=5A554B8E2DB8D41EEE8DF9E1E18269DB
 simulator.finsim.decimalization.value=1234567890123456
