Review comments incorporated data and code in sync

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -1,4 +1,4 @@
-application.url=http://ech-10-168-128-210.mastercard.int:25003/integratedIssuing-customerPortal/mpts/app/Login
+application.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 base.url=http://10.168.128.50:25003/mpts/eis/ws
 application.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 agent.application.url=http://ech-10-168-129-105.mastercard.int:25003/integratedIssuing-agentPortal/WebPages/Login.jsp
