--- a/src/main/resources/config/stageSA/Data/CreditMappingForJson.json
+++ b/src/main/resources/config/stageSA/Data/CreditMappingForJson.json
@@ -1,12 +1,33 @@
-{  
+{
+  "institute": [
+{
+   "code":"190525",
+   "abbreviation":"ISSAUTO",
    "association":"MASTERCARD",
    "branch":"OfficeBranch10985",
    "card_packid_generation_template":"PAN723",
    "device_id_generation_template":"PAN698",
    "device_customer_type":"Individual",
-   "embossing_vendor":"V57602",
+   "embossing_vendor":"V21550",
    "interchange":"MASTERCARD",
    "issuer_bin":"prabhu.ramaswamy@mastercard.com",
    "plastic_id":"100",
    "picture_code":"166"
+   },
+   
+  {
+   "code":"110000",
+   "abbreviation":"CANARA",
+   "association":"MASTERCARD",
+   "branch":"3333",
+   "card_packid_generation_template":"PAN639",
+   "device_id_generation_template":"PAN589",
+   "device_customer_type":"Individual",
+   "embossing_vendor":"V14170",
+   "interchange":"MASTERCARD",
+   "issuer_bin":"prabhu.ramaswamy@mastercard.com",
+   "plastic_id":"638",
+   "picture_code":"548"
+   }
+   ]
 }
