--- a/src/main/resources/config/automation2/environment.properties
+++ b/src/main/resources/config/automation2/environment.properties
@@ -28,6 +28,8 @@ linux.host.name=10.168.130.204
 linux.port.number=2222
 linux.user.name=dc-user
 linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
+linux.folder.path=/home/dc-user/integrated/elt_bo/data/
+linux.ipm_upload.path=IPM_INCOMING/INPUT/
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 linux.folder.path=
 
