--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -33,6 +33,8 @@ linux.host.name=10.168.128.232
 linux.port.number=2222
 linux.user.name=issdev
 linux.user.password=IrtRizLhbuaVGEwO7XiKUA==
+linux.folder.path=/home/dc-user/integrated/elt_bo/data/
+linux.ipm_upload.path=IPM_INCOMING/INPUT/
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 linux.folder.path=
 
