--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -68,6 +68,7 @@ linux.port.number=2222
 linux.user.name=ptsautouser
 linux.user.password=EX0i/+13t+grvrIdDWxoag==
 linux.folder.path=/mptshome/STAGE2/integrated/elt_bo/data/AUTOMATION_1/
+linux.ipm_upload.path=IPM_INCOMING/input/
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 
 simulator.mas.port=9119
