updated vts and mdfs properties

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -75,17 +75,17 @@ simulator.mas.port=9119
 simulator.mas.ipaddress=10.158.14.89
 simulator.mas.version=Latest
 
-simulator.mdfs.port=0
-simulator.mdfs.ipaddress=0
+simulator.mdfs.port=9128
+simulator.mdfs.ipaddress=10.158.14.89
 simulator.mdfs.version=Latest
 
 simulator.mcps.version=Latest
 
 simulator.vts.port=
 simulator.vts.ipaddress=
-simulator.vts.vts.ipaddress=
-simulator.vts.host.ipaddress=
-simulator.vts.host.port=
+simulator.vts.vts.ipaddress=172.27.139.166
+simulator.vts.host.ipaddress=10.158.14.89
+simulator.vts.host.port=9114
 
 simulator.finsim.port=6161
 simulator.finsim.ipaddress=10.254.0.36
