Changes For File upload Automation 2 and Stage Execution

--- a/src/main/resources/config/automation2/environment.properties
+++ b/src/main/resources/config/automation2/environment.properties
@@ -30,6 +30,7 @@ linux.user.name=dc-user
 linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
 linux.folder.path=/home/dc-user/integrated/elt_bo/data/
 linux.ipm_upload.path=IPM_INCOMING/INPUT/
+linux.application.upload.path=121212/input
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 
 simulator.mas.port=9119
