Adding Application upload property in Automation environment

--- a/src/main/resources/config/automation/environment.properties
+++ b/src/main/resources/config/automation/environment.properties
@@ -29,6 +29,7 @@ linux.port.number=2222
 linux.user.name=dc-user
 linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
 linux.folder.path=/home/dc-user/integrated/elt_bo/data/
+linux.application.upload.path
 linux.ipm_upload.path=IPM_INCOMING/INPUT/
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 
