Visa - New Application and New Client story files

--- a/src/main/resources/config/automation2/Data/CreditMappingForJson.json
+++ b/src/main/resources/config/automation2/Data/CreditMappingForJson.json
@@ -39,7 +39,7 @@
    "deviceIdGenerationTemplate":"PAN019",
    "customerType":"Individual",
    "embossingVendor":"AUTOB1",
-   "interchange":"MASTERCARD",
+   "interchange":"VISA",
    "issuerBin":"CREDIT",
    "plasticId":"AUT",
    "pictureCode":"AUT"
