--- a/src/main/resources/config/demo/environment.properties
+++ b/src/main/resources/config/demo/environment.properties
@@ -35,6 +35,7 @@ linux.user.name=issdev
 linux.user.password=IrtRizLhbuaVGEwO7XiKUA==
 linux.folder.path=/home/dc-user/integrated/elt_bo/data/
 linux.ipm_upload.path=IPM_INCOMING/INPUT/
+linux.application.upload.path=/APPLICATION_UPD_PREPAID/input
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 
 simulator.mas.port=9127
