--- a/src/main/resources/config/automation2/environment.properties
+++ b/src/main/resources/config/automation2/environment.properties
@@ -11,6 +11,9 @@ portal.agent.user.admin.name=Admin555
 portal.agent.user.agency.name=AGNC001
 portal.agent.user.branch.name=BRNCH001
 portal.agent.user.agent.name=AGNT007
+portal.agent.user.nonfundedagency.name=AGNC002
+portal.agent.user.nonfundedbranch.name=BRNCH002
+portal.agent.user.nonfundedagent.name=AGNT008
 portal.agent.user.password=8SJ28cqk5IcKiZyWDJCAnA==
 portal.agent.user.admin.password=RPfjjObtdPb/z3tWSkRpXg==
 
