--- a/src/main/resources/config/automation2/environment.properties
+++ b/src/main/resources/config/automation2/environment.properties
@@ -34,6 +34,8 @@ linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
 linux.folder.path=/home/dc-user/integrated/elt_bo/data/
 linux.ipm_upload.path=IPM_INCOMING/INPUT/
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
+linux.application.upload.path=121212/input
+linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 
 simulator.mas.port=9119
 simulator.mas.ipaddress=10.168.130.204
