--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -63,7 +63,7 @@ Agent.portal.user.agency.password=1122
 Agent.portal.user.agent.name=VNAGT
 Agent.portal.user.agent.password=1122
 
-linux.host.name=10.158.14.89
+linux.host.name=	
 linux.port.number=2222
 linux.user.name=ptsautouser
 linux.user.password=EX0i/+13t+grvrIdDWxoag==
