resolved conflict manually

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -93,7 +93,7 @@ simulator.vts.host.port=9114
 #simulator.finsim.pinkey=5A554B8E2DB8D41EEE8DF9E1E18269DB
 #simulator.finsim.decimalization.value=1234567890123456
 
-!- Details For second FinSim Server
+! -- Details For second FinSim Server
 simulator.finsim.port=6262
 simulator.finsim.ipaddress=10.254.2.36
 simulator.finsim.password=zkk0xVdShEy48uuuhlabbw== 
