Code changes for Transaction Feedback

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -100,11 +100,11 @@ simulator.finsim.password=zkk0xVdShEy48uuuhlabbw==
 simulator.finsim.pinkey=5A554B8E2DB8D41EEE8DF9E1E18269DB
 simulator.finsim.decimalization.value=1234567890123456
 
-db.host=melstg1-scan
+db.host=MPTS-SA-ISSUING-STAGE2
 db.port=1527
 db.username=MPTSE_ISS_USER
 db.password=KmslWW3d
-db.serviceName=Tesa1s
+db.serviceName=EIS_SA_ONLINE_SERV
 
 
 bdd.jdbc.tools.db.driverClassName=oracle.jdbc.driver.OracleDriver
