adding functionality to check image and flat file download

--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -19,6 +19,8 @@ portal.customer.user.name=ravindra1
 portal.customer.user.password=8SJ28cqk5IcKiZyWDJCAnA==
 portal.customer.user.admin.name=TanmayW
 portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
+portal.customer.user.admin.name=Admin
+portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
 
 portal.agent.url=https://stage.sa.agent.mastercard.com/mpts/eis/app
