Commit for Pin Ack Scenarios

--- a/src/main/resources/config/automation2/environment.properties
+++ b/src/main/resources/config/automation2/environment.properties
@@ -27,9 +27,9 @@ portal.collect.user.name=Admin
 portal.collect.user.password=A3THHHwldpgQs6XxAHKZhQ==
 portal.collect.user.admin.password=
 
-linux.host.name=10.168.130.204
+linux.host.name=10.168.131.252
 linux.port.number=2222
-linux.user.name=dc-user
+linux.user.name=intiss
 linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
 linux.folder.path=/home/dc-user/integrated/elt_bo/data/
 linux.ipm_upload.path=IPM_INCOMING/INPUT/
